[project]
name = "test-time-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mujoco>=3.7.0",
    "numpy>=2.4.4",
    "numpy-stl>=3.2.0",
    "stable-baselines3>=2.8.0",
    "viser>=1.0.26",
]

[dependency-groups]
dev = ["pybind11-stubgen>=2.5.5"]

[tool.pyright]
stubPath = "typings"
